testdata/password-bad-identity-file.txtar
env RESTIC_REPOSITORY=$WORK/repo
exec restic init --password-file $WORK/password.txt

exec restic-age-key add --password-file $WORK/password.txt --recipient age1tmkxjxzan25j6rmjpuffq2ft8z45q75knm356qaypcczvsz4pvds46d9l7
! stderr .

! exec restic-age-key password --identity-file key.txt
! stdout .
cmp stderr identity-file-stderr.txt

-- password.txt --
secret

-- key.txt --
THIS-IS-NOT-A-VALID-AGE-KEY

-- identity-file-stderr.txt --
age: error: reading "key.txt": failed to read "key.txt": error at line 1: unknown identity type
age: report unexpected or unhelpful errors at https://filippo.io/age/report

